default/netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: default
spec:
  selector:
    app: netbox
  type: ClusterIP
  ports:
  - name: netbox
    port: 8080
    targetPort: 8080
