default/netbox/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netbox
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  tls:
  - hosts:
    - q.desertbluffs.com
  rules:
  - host: q.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: netbox
          servicePort: netbox
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netbox-oauth2
  namespace: default
spec:
  tls:
  - hosts:
    - q.desertbluffs.com
  rules:
  - host: q.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
